tests/baselines/reference/switchBreakStatements.errors.txt
tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts(3,10): error TS2678: Type '"a"' is not comparable to type '""'.
tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts(9,10): error TS2678: Type '"a"' is not comparable to type '""'.
tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts(16,10): error TS2678: Type '"a"' is not comparable to type '""'.
tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts(22,10): error TS2678: Type '"a"' is not comparable to type '""'.
tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts(25,18): error TS2678: Type '"a"' is not comparable to type '""'.
tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts(31,10): error TS2678: Type '"a"' is not comparable to type '""'.
tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts(34,18): error TS2678: Type '"a"' is not comparable to type '""'.
tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts(41,10): error TS2678: Type '"a"' is not comparable to type '""'.
tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts(43,18): error TS2678: Type '"a"' is not comparable to type '""'.
tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts(45,26): error TS2678: Type '"a"' is not comparable to type '""'.
tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts(49,34): error TS2678: Type '"a"' is not comparable to type '""'.


==== tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts (11 errors) ====
    
    switch ('') {
        case 'a':
             ~~~
!!! error TS2678: Type '"a"' is not comparable to type '""'.
            break;
    }
    
    ONE:
    switch ('') {
        case 'a':
             ~~~
!!! error TS2678: Type '"a"' is not comparable to type '""'.
            break ONE;
    }
    
    TWO:
    THREE:
    switch ('') {
        case 'a':
             ~~~
!!! error TS2678: Type '"a"' is not comparable to type '""'.
            break THREE;
    }
    
    FOUR:
    switch ('') {
        case 'a':
             ~~~
!!! error TS2678: Type '"a"' is not comparable to type '""'.
            FIVE:
            switch ('') {
                case 'a':
                     ~~~
!!! error TS2678: Type '"a"' is not comparable to type '""'.
                    break FOUR;
            }
    }
    
    switch ('') {
        case 'a':
             ~~~
!!! error TS2678: Type '"a"' is not comparable to type '""'.
            SIX:
            switch ('') {
                case 'a':
                     ~~~
!!! error TS2678: Type '"a"' is not comparable to type '""'.
                    break SIX;
            }
    }
    
    SEVEN:
    switch ('') {
        case 'a':
             ~~~
!!! error TS2678: Type '"a"' is not comparable to type '""'.
            switch ('') {
                case 'a':
                     ~~~
!!! error TS2678: Type '"a"' is not comparable to type '""'.
                    switch ('') {
                        case 'a':
                             ~~~
!!! error TS2678: Type '"a"' is not comparable to type '""'.
                            break SEVEN;
                            EIGHT:
                            switch ('') {
                                case 'a':
                                     ~~~
!!! error TS2678: Type '"a"' is not comparable to type '""'.
                                    var fn = function () { }
                                    break EIGHT;
                            }
                    }
            }
    }
    